WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
49685
Don't crash when invalidating a page overlay that hasn't been installed yet
https://bugs.webkit.org/show_bug.cgi?id=49685
Summary
Don't crash when invalidating a page overlay that hasn't been installed yet
Anders Carlsson
Reported
2010-11-17 13:51:01 PST
Don't crash when invalidating a page overlay that hasn't been installed yet
Attachments
Patch
(1.33 KB, patch)
2010-11-17 13:53 PST
,
Anders Carlsson
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2010-11-17 13:53:27 PST
Created
attachment 74151
[details]
Patch
Anders Carlsson
Comment 2
2010-11-17 14:35:24 PST
Committed
r72241
: <
http://trac.webkit.org/changeset/72241
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug