Don't crash when invalidating a page overlay that hasn't been installed yet https://bugs.webkit.org/show_bug.cgi?id=49685

Reviewed by John Sullivan.

Null check the web page.

* WebProcess/WebPage/PageOverlay.cpp:
(WebKit::PageOverlay::setNeedsDisplay):

Canonical link: https://commits.webkit.org/62703@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@72241 268f45cc-cd09-0410-ab3c-d52691b4dbfc